k8s/pet-server.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /cat
            pathType: Prefix
            backend:
              service:
                name: my-cat-svc
                port:
                  number: 80
    - host: localhost
      http:
        paths:
          - path: /dog
            pathType: Prefix
            backend:
              service:
                name: my-dog-svc
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-nginx
  name: my-cat-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: my-cat-server
    type: backend
    available: "true"
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-nginx
  name: cat-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-cat-server
      type: backend
      available: "true"
  template:
    metadata:
      labels:
        app: my-cat-server
        type: backend
        available: "true"
    spec:
      containers:
        - name: my-cat-server
          image: godchiken/eks-spring-boot:cat-server
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 5
